<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/dp_16">

        <Button
            android:id="@+id/btnShowLocalList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_10"
            android:text="@string/button_show_local_list" />

        <Button
            android:id="@+id/btnAddShow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_10"
            android:text="@string/button_add_tv_show" />

        <Button
            android:id="@+id/btnClearLocalData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_10"
            android:text="@string/button_clear_local_list" />

        <Button
            android:id="@+id/btnConnect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:padding="@dimen/dp_10"
            android:text="@string/button_connect" />

        <Button
            android:id="@+id/btnShowRemoteList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:padding="@dimen/dp_10"
            android:text="@string/button_show_remote_list" />

        <Button
            android:id="@+id/btnSync"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:padding="@dimen/dp_10"
            android:text="@string/button_sync_now" />

        <RelativeLayout
            android:id="@+id/accountStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_10">

            <TextView
                android:id="@+id/status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:enabled="false"
                android:padding="@dimen/dp_10"
                android:text="@string/text_status_unknown" />

            <CheckBox
                android:id="@+id/cbIsSyncable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/status"
                android:enabled="false"
                android:text="@string/text_is_syncable" />

            <CheckBox
                android:id="@+id/cbAutoSync"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/status"
                android:enabled="false"
                android:text="@string/text_auto_sync" />
        </RelativeLayout>

    </LinearLayout>
</ScrollView>