<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/dp_16"
    android:paddingRight="@dimen/dp_16">

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:hint="@string/text_name"
        android:inputType="text"
        android:padding="@dimen/dp_10" />

    <EditText
        android:id="@+id/accountName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:hint="@string/text_email"
        android:inputType="textEmailAddress"
        android:padding="@dimen/dp_10" />

    <EditText
        android:id="@+id/accountPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:hint="@string/text_password"
        android:inputType="textPassword"
        android:padding="@dimen/dp_10" />

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:padding="@dimen/dp_10"
        android:text="@string/button_signup" />

    <TextView
        android:id="@+id/alreadyMember"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:padding="@dimen/dp_4"
        android:text="@string/text_already_user" />
</LinearLayout>